--- a/new_page.html
+++ b/new_page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Website1</title>
+        <title>My Website2</title>
     </head>
     <body>
-        <h1> My Website</h1>
+        <h1> My Website2</h1>
     </body>
 </html>
