--- a/new_page.html
+++ b/new_page.html
@@ -4,6 +4,6 @@
         <title>My Website2</title>
     </head>
     <body>
-        <h1> My Website2</h1>
+        <h1> My Website TWO</h1>
     </body>
 </html>
