--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>My Website1</title>
     </head>
     <body>
-        <h1> My Website</h1>
+        <h1> My Website 1</h1>
     </body>
 </html>
